[tool.poetry]
name = "pycentroid-common"
version = "0.1.0"
description = "@centroid framework for python common"
authors = ["Kyriakos Barbounakis <k.barbounakis@gmail.com>"]
readme = "README.md"
packages = [
  { include = "centroid" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydash = "^7.0.3"
pyyaml = "^6.0"
asyncio = "^3.4.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[pytest]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
